//	protoc -I=.\. --python_out=. .\FileObject.proto
//	protoc -I=.\. --cpp_out=. .\FileObject.proto

//option optimize_for = SPEED;
//option optimize_for = CODE_SIZE;
option optimize_for = LITE_RUNTIME;
 
message ResourceIndex {
	required int64	key = 1; 
	required string	name = 2;
	required int32	offset = 3;
	required int32  size=4;
	optional int32  IsPicture=5;	//	看看是否为图片资源
};

// resource url = ServerConfig.url+'/' + ResourceIndex[i].name
// filetype 0 unzip   1 zip 
message ServerConfig{
	enum FILETYPE {
		UNZIP = 0;
		ZIP = 1; 
	}
	required string version = 1;
	required string	packagename = 2;
	required string	url = 3;
	optional FILETYPE filetype = 4 [default = UNZIP];
	repeated ResourceIndex index = 5;
}
